# Validation_and_convertions

./: pyproject.toml  pytest.ini
app/tests/: conftest.py
app/tests/fixtures/: __init__.py  data_fixtures.py  marshmellow_fixtures.py
app/tests/marshmellow/: test_marshmellow_convertions.py
app/tests/pydantic/: test_pydantic.py
