[tool.poetry]
name = "validation_and_convertions"
version = "0.1.0"
description = ""
authors = ["Alex <ivanovivan159753@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
marshmallow = "^3.18.0"
pytest-dictsdiff = "^0.5.8"
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
